Update registration template. Add favicons

--- a/lib/butler_web/templates/layout/root.html.leex
+++ b/lib/butler_web/templates/layout/root.html.leex
@@ -11,6 +11,10 @@
             href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;600;700&display=swap"
             rel="stylesheet">
         <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
     </head>
     <body class="bg-gray-50">
         <%= @inner_content %>
