--- a/lib/butler_web/templates/layout/live.html.leex
+++ b/lib/butler_web/templates/layout/live.html.leex
@@ -1,4 +1,4 @@
-<main role="main">
+<main role="main" class="">
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
