--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,21 +1,20 @@
-/* This file is for your main application css. */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "./components/day.scss";
-@import "tailwindcss/utilities";
 @import "../node_modules/nprogress/nprogress.css";
 
-.timeline li {
-  @apply py-4 pl-2;
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+@import "./components/day.scss";
+@import "./components/nprogress.scss";
+@import "./pages/calendar.scss";
+
+@import "tailwindcss/utilities";
+
+.sample-nav {
+  flex: 0 0 auto;
 }
 
-.timeline li::after {
-  @apply absolute left-0 w-full bg-gray-200;
-}
-
-.timeline li::after {
-  content: '';
-  height: 1px;
+.sample {
+  flex: 1 1 auto;
 }
 
 /* LiveView specific classes for your customizations */
@@ -34,40 +33,6 @@
 }
 .phx-disconnected *{
   pointer-events: none;
-}
-
-.phx-modal {
-  opacity: 1!important;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-}
-
-.phx-modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-.phx-modal-close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.phx-modal-close:hover,
-.phx-modal-close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 
