--- a/lib/butler_web/live/todo_live/index.html.leex
+++ b/lib/butler_web/live/todo_live/index.html.leex
@@ -123,9 +123,9 @@
                             <svg class="text-gray-500 h-5 w-5 mr-1.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                             </svg>
-                            Add todo
+                            <span class="underline">N</span>ew todo
                         <% end %>
-                        <ul class="space-y-2">
+                        <ul class="space-y-2 py-6">
                             <%= case @todos do %>
                                 <% [] -> %>
                                     <div class="mt-24 mx-auto flex items-center justify-center h-24 w-24">
@@ -147,25 +147,22 @@
                                 <% [_ | _] -> %>
                                     <%= for todo <- @todos do %>
                                         <li class="bg-white rounded-md cursor-pointer py-4 flex justify-between hover:shadow-md px-1.5 border border-gray-300">
-                                            <div class="ml-3">
-                                                <p class="text-sm font-medium text-gray-900"><%= todo.name %></p>
-                                                <div class="mt-2 flex items-center text-sm text-gray-500 space-x-2">
-                                                    <div class="flex items-center">
-                                                        <svg class="flex-shrink-0 mr-1.5 h-4 w-4 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                                        </svg>
-                                                        <span class="truncate"><%= todo.duration %> minutes</span>
+                                            <%= live_patch to: Routes.todo_index_path(@socket, :edit, todo), class: "w-full" do %>
+                                                <div class="ml-3">
+                                                    <p class="text-sm font-medium text-gray-900"><%= todo.name %></p>
+                                                    <div class="mt-2 flex items-center text-sm text-gray-500 space-x-2">
+                                                        <div class="flex items-center">
+                                                            <svg class="flex-shrink-0 mr-1.5 h-4 w-4 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                                            </svg>
+                                                            <span class="truncate"><%= todo.duration %> minutes</span>
+                                                        </div>
+                                                        <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
+                                                            <%= get_priority(todo.priority) %>
+                                                        </span>
                                                     </div>
-                                                    <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
-                                                        <%= get_priority(todo.priority) %>
-                                                    </span>
                                                 </div>
-                                            </div>
-                                            <button type="button" class="items-center px-2.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                                                <svg class="h-3.5 w-3.5 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-                                                </svg>
-                                            </button>
+                                            <% end %>
                                         </li>
                                     <% end %>
                             <% end %>
