--- a/lib/butler_web/live/todo_live/index.html.leex
+++ b/lib/butler_web/live/todo_live/index.html.leex
@@ -101,10 +101,13 @@
                     </ul>
                 </div>
                 <div class="grid grid-cols-7 text-gray-500 divide-x w-full z-10">
+                    <% grouped_todos = group_todos_by_day(@todos) %>
+                    <% IO.inspect grouped_todos %>
                     <%= for day <- list_week() do %>
+                        <% IO.inspect day, label: "DAY" %>
                         <%= live_component @socket, DayComponent,
                             day: day,
-                            todos: [%Todo{duration: 0.5, start: 0}, %Todo{duration: 0.5, start: 0.5}] %>
+                            todos: Map.get(grouped_todos, day, []) %>
                     <% end %>
                 </div>
             </div>
