--- a/lib/butler_web/live/todo_live/form_component.html.leex
+++ b/lib/butler_web/live/todo_live/form_component.html.leex
@@ -22,6 +22,7 @@
                             <div class="mt-1 flex rounded-md shadow-sm">
                                 <%= text_input f, :name, placeholder: "Do something", class: "flex-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full min-w-0 rounded-md sm:text-sm border-gray-300" %>
                             </div>
+                            <%= error_tag f, :name %>
                         </div>
                         <div class="sm:col-span-3">
                             <label for="country" class="block text-sm font-medium text-gray-700">
@@ -30,6 +31,7 @@
                             <div class="mt-1">
                                 <%= select f, :priority, list_priorities(), class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
                             </div>
+                            <%= error_tag f, :priority %>
                         </div>
                         <div class="sm:col-span-3">
                             <label for="last_name" class="block text-sm font-medium text-gray-700">
@@ -38,17 +40,27 @@
                             <div class="mt-1">
                                 <%= number_input f, :duration, class:  "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
                             </div>
+                            <%= error_tag f, :duration %>
                         </div>
                     </div>
                 </div>
-                <div class="pt-5">
+                <div class="pt-5 flex justify-between">
                     <div class="flex justify-end">
                         <button type="submit"
                             class="mr-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            Add
+                            <%= get_submit_name(@action) %>
                         </button>
                         <%= live_patch "Cancel", to: @return_to, class: "bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
                     </div>
+                    <%= if @action == :edit do %>
+                        <div class="flex justify-end">
+                            <%= live_patch to: @return_to, phx_click: "delete", phx_value_id: @todo.id, data: [confirm: "Are you sure you want to delete this?"], class: "bg-red-200 py-2 px-4 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-red-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500" do %>
+                                <svg class="text-red-800 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                                </svg>
+                            <% end %>
+                        </div>
+                    <% end %>
                 </div>
             </form>
         </div>
